[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbe_cli"
version = "0.2.1"
authors = [
  { name="Claude Manchester", email="atlanmatrix@gmail.com" },
]
description = "Better performance, higher efficiency and more features."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.1"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/atlanmatrix/DBExplorer_CLI"
"Bug Tracker" = "https://github.com/atlanmatrix/DBExplorer_CLI/issues"
